--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,6 @@
 							%li 
 								=link_to "Inventar", items_path
 							%li 
-								=link_to "Ausleihen", rents_path
-					#nav2						
+								=link_to "Ausleihen", rents_path				
 			#content
-				#content_small
+				#content_small=yield
